# thork

./: README.md  pyproject.toml
src/thork/: __init__.py  codegen.py  dtypes.py  ir.py  jit.py  kittens.py  runtime.py  tracer.py  types.py
src/thork/kernels/: __init__.py  matmul.py  matrix_add.py
src/thork/verified/: __init__.py  _core.py
tests/: test_kittens.py  test_thork.py  test_verified.py
